Renamed MailControllerTests to just MailTests